k8s/httproutes/invoice-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoice-route
  namespace: sales-test-ns
spec:
  parentRefs:
  - name: sales-gateway
    namespace: sales-gateway-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/invoices
    # filters:
    # - type: URLRewrite
    #   urlRewrite:
    #     path:
    #       type: ReplacePrefixMatch
    #       replacePrefixMatch: /invoices
    backendRefs:
    - name: invoice-service
      port: 3000
