k8s/httproutes/payment-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: payment-route
    namespace: sales-test-ns
spec:
  parentRefs:
  - name: sales-gateway
    namespace: sales-gateway-ns
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /api/v1/payment
    # filters:
    # - type: URLRewrite
    #   urlRewrite:
    #     path:
    #       type: ReplacePrefixMatch
    #       replacePrefixMatch: /payment
    backendRefs:
    - name: payment-service
      port: 3000
